# smn

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  alsotest.smn  optionparser.h  output.cpp  readme.md  reference.html  reference.rst  simondev-tests.smn  test.smn  test2.smn
.github/ISSUE_TEMPLATE/: bug_report.md  feature-request.md  feature_request.md
.github/workflows/: cmake.yml  codeql-analysis.yml
docs/: index.md
simondev/: simon.cpp.smn  simondev.h.smn
smn-backup/: .gitignore
src/: elements.cpp  elements.h  language_element.h  languages.h  main.cpp  module.cpp  module.h  parser.cpp  simon.h  simondev.cpp  simondev.h  str.cpp  str.h  use.cpp  use.h
src/elements/: exec_function_element.cpp  exec_function_element.h  function_element.cpp  function_element.h  include_element.cpp  include_element.h  module_element.cpp  module_element.h  set_variable_element.cpp  set_variable_element.h  use_element.cpp  use_element.h
src/functions/: function.cpp  function_mgmt.cpp  functions.h
src/generators/: c_generator.cpp  cpp_generator.cpp  generator.cpp  generator.h
src/module/std/: std.cpp  str.cpp  str.h
src/module/std/elements/io/: print_element.cpp  print_element.h  println_element.cpp  println_element.h
src/module/std/elements/math/: add_element.cpp  add_element.h  divide_element.cpp  divide_element.h  modulus_element.cpp  modulus_element.h  multiply_element.cpp  multiply_element.h  subtract_element.cpp  subtract_element.h
src/simondev/c/: simondevc.c  simondevc.h
src/simondev/cxx/: simondevcxx.cpp  simondevcxx.h
tests/: test_basics.cpp  test_basics.smn  test_c_framework.c.smn  test_c_stack.c.smn  test_framework.cpp.smn  test_stack.cpp.smn
